RESOLVED FIXED 264609
REGRESSION (270339@main): [ iOS17 ] TestWebKitAPI.WebKit.InvalidConfiguration is a crash failure
https://bugs.webkit.org/show_bug.cgi?id=264609
Summary REGRESSION (270339@main): [ iOS17 ] TestWebKitAPI.WebKit.InvalidConfiguration...
Marta Darbinyan
Reported 2023-11-10 11:02:11 PST
Description: TestWebKitAPI.WebKit.InvalidConfiguration is crashing since 270342@main This issue can be reproduced by using the command: run-api-tests --ios-simulator --debug TestWebKitAPI.WebKit.InvalidConfiguration History: https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.WebKit.InvalidConfiguration&version_name=iOS%2017 Result: TestWebKitAPI.WebKit.InvalidConfiguration Child process terminated with signal 11: Segmentation fault
Attachments
Radar WebKit Bug Importer
Comment 1 2023-11-10 11:04:07 PST
Tim Horton
Comment 2 2023-11-11 13:12:34 PST
EWS
Comment 3 2023-11-11 15:09:39 PST
Committed 270603@main (29d1f69555f6): <https://commits.webkit.org/270603@main> Reviewed commits have been landed. Closing PR #20376 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.