REGRESSION (270339@main): [ iOS17 ] TestWebKitAPI.WebKit.InvalidConfiguration is a crash failure https://bugs.webkit.org/show_bug.cgi?id=264609 rdar://118242512

Reviewed by Alex Christensen.

* Source/WebKit/UIProcess/Cocoa/WKWebViewContentProviderRegistry.mm:
(-[WKWebViewContentProviderRegistry initWithConfiguration:]):
ObjC null rules stop applying when you start using C++ ivars.

Canonical link: https://commits.webkit.org/270603@main